--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Countdown -->
     <div class="countdown">
 
-      <!-- hours -->
+      <!-- days -->
       <div class="countdown-format">
         <div>
           <h4 class="days">12</h4>
@@ -35,7 +35,7 @@
           <span>hours</span>
         </div>
       </div>
-      <!-- end of days -->
+      <!-- end of hours -->
 
       <!-- minutes -->
       <div class="countdown-format">
@@ -46,32 +46,21 @@
       </div>
       <!-- end of minutes -->
 
-      <!-- days -->
+      <!-- seconds -->
       <div class="countdown-format">
         <div>
           <h4 class="seconds">12</h4>
           <span>seconds</span>
         </div>
       </div>
-      <!-- end of days -->
+      <!-- end of seconds -->
     </div>
-
   </section>
-
     <footer class="footer">
     <a href="https://github.com/bamii-a"><img src="./images/icon-facebook.svg" alt="facebook" class="icon"></a>
     <a href="https://github.com/bamii-a"><img src="./images/icon-instagram.svg" alt="instagram" class="icon"></a>
     <a href="https://github.com/bamii-a"><img src="./images/icon-pinterest.svg" alt="pinterest" class="icon"></a>
   </footer>
-
-  
-
-  <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/bamii-a">Bamii</a>.
-    </div> -->
     <script src="./app.js"></script>
 </body>
 
