--- a/index.html
+++ b/index.html
@@ -1,67 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/myMoji.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Countdown timer</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
-  <title>Countdown timer</title>
-</head>
-
-<body>
-<section class="main">
-  <img src="./images/bg-stars.svg" alt="">
-  <div class="heading">
-      <h3>Countdown till 2022</h3>
-    </div>
-    <!-- Countdown -->
-    <div class="countdown">
-
-      <!-- days -->
-      <div class="countdown-format">
-        <div>
-          <h4 class="days">12</h4>
-          <span>days</span>
-        </div>
+  <body>
+    <section class="main">
+      <img src="./images/bg-stars.svg" alt="" />
+      <div class="heading">
+        <h3>Countdown till 2022</h3>
       </div>
-      <!-- end of days -->
-
-      <!-- hours -->
-      <div class="countdown-format">
-        <div>
-          <h4 class="hours">12</h4>
-          <span>hours</span>
+      <!-- Countdown -->
+      <div class="countdown">
+        <!-- days -->
+        <div class="countdown-format">
+          <div>
+            <h4 class="days">12</h4>
+            <span>days</span>
+          </div>
         </div>
-      </div>
-      <!-- end of hours -->
+        <!-- end of days -->
 
-      <!-- minutes -->
-      <div class="countdown-format">
-        <div>
-          <h4 class="minutes">12</h4>
-          <span>minute</span>
+        <!-- hours -->
+        <div class="countdown-format">
+          <div>
+            <h4 class="hours">12</h4>
+            <span>hours</span>
+          </div>
         </div>
-      </div>
-      <!-- end of minutes -->
+        <!-- end of hours -->
 
-      <!-- seconds -->
-      <div class="countdown-format">
-        <div>
-          <h4 class="seconds">12</h4>
-          <span>seconds</span>
+        <!-- minutes -->
+        <div class="countdown-format">
+          <div>
+            <h4 class="minutes">12</h4>
+            <span>minute</span>
+          </div>
         </div>
+        <!-- end of minutes -->
+
+        <!-- seconds -->
+        <div class="countdown-format">
+          <div>
+            <h4 class="seconds">12</h4>
+            <span>seconds</span>
+          </div>
+        </div>
+        <!-- end of seconds -->
       </div>
-      <!-- end of seconds -->
-    </div>
-  </section>
+    </section>
     <footer class="footer">
-    <a href="https://github.com/bamii-a"><img src="./images/icon-facebook.svg" alt="facebook" class="icon"></a>
-    <a href="https://github.com/bamii-a"><img src="./images/icon-instagram.svg" alt="instagram" class="icon"></a>
-    <a href="https://github.com/bamii-a"><img src="./images/icon-pinterest.svg" alt="pinterest" class="icon"></a>
-  </footer>
+      <a href="https://github.com/bamii-a"
+        ><img src="./images/icon-facebook.svg" alt="facebook" class="icon"
+      /></a>
+      <a href="https://github.com/bamii-a"
+        ><img src="./images/icon-instagram.svg" alt="instagram" class="icon"
+      /></a>
+      <a href="https://github.com/bamii-a"
+        ><img src="./images/icon-pinterest.svg" alt="pinterest" class="icon"
+      /></a>
+    </footer>
     <script src="./app.js"></script>
-</body>
-
+  </body>
 </html>
